...
      child: Builder(
        builder: (context) {
          return Scaffold(
            appBar: AppBar(
              title: Column(
                children: [
                  const Text("Meus Portões", style: TextStyle(fontSize: 16)),
                  Text(
                    _tituloCondominio,
                    style: const TextStyle(
                      fontSize: 12,
                      fontWeight: FontWeight.w400,
                    ),
...
